--- a/alchemist/Dynamic_Sections_Settings_and_Display.html
+++ b/alchemist/Dynamic_Sections_Settings_and_Display.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Syrah - 6&nbsp; Metering Section</title>
+<title>Alchemist - Dynamic Sections Settings and Display</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,8 +30,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./Preset_Management.html" rel="next">
-<link href="./Processing_Section.html" rel="prev">
+<link href="./Dynamic_Sections_Settings.html" rel="next">
+<link href="./Band_Display.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -73,7 +73,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Metering_Section.html"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Metering Section</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Dynamic_Sections_Settings_and_Display.html">Dynamic Sections Settings and Display</a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -88,9 +88,9 @@ ul.task-list li input[type="checkbox"] {
   <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal sidebar-navigation floating overflow-auto">
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
-      <a href="./">Syrah</a> 
+      <a href="./">Alchemist</a> 
         <div class="sidebar-tools-main">
-    <a href="./Syrah.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
+    <a href="./Alchemist.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
 </div>
     </div>
       </div>
@@ -103,62 +103,85 @@ ul.task-list li input[type="checkbox"] {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syrah</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Introduction.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Introduction</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./User_Interface.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">User Interface</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Input_Output_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Input Output Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Processing_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Processing Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Metering_Section.html" class="sidebar-item-text sidebar-link active"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Metering Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Preset_Management.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Preset Management</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Plug-in_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Plug-in Settings</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Get_started.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Get started</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Specifications.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">10</span>&nbsp; <span class="chapter-title">Specifications</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Alchemist - The Alchemist concept</span></a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">Appendices</a>
+            <a href="./General_Settings_and_Display.html" class="sidebar-item-text sidebar-link">General Settings and Display</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
       </div>
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">General Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">General Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Bands_Settings_and_Display.html" class="sidebar-item-text sidebar-link">Bands Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Band Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Time_Related_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Time Related Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Band Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Dynamic_Sections_Settings_and_Display.html" class="sidebar-item-text sidebar-link active">Dynamic Sections Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Dynamic Sections Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Dynamic Sections Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <span class="sidebar-item-text sidebar-link text-start">Specifications</span>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">Appendices</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-5" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./../flux_processing_release_notes.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Release Notes</span></a>
@@ -172,32 +195,14 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
-   
-  <ul>
-  <li><a href="#signal-input-vu-meter-23" id="toc-signal-input-vu-meter-23" class="nav-link active" data-scroll-target="#signal-input-vu-meter-23"><span class="header-section-number">6.1</span> Signal Input VU meter (23)</a></li>
-  <li><a href="#signal-output-vu-meter-24" id="toc-signal-output-vu-meter-24" class="nav-link" data-scroll-target="#signal-output-vu-meter-24"><span class="header-section-number">6.2</span> Signal Output VU meter (24)</a></li>
-  <li><a href="#lcd-onoff-25" id="toc-lcd-onoff-25" class="nav-link" data-scroll-target="#lcd-onoff-25"><span class="header-section-number">6.3</span> LCD On/Off (25)</a></li>
-  <li><a href="#lcd-scroll-waveform-speed-26" id="toc-lcd-scroll-waveform-speed-26" class="nav-link" data-scroll-target="#lcd-scroll-waveform-speed-26"><span class="header-section-number">6.4</span> LCD Scroll Waveform Speed (26)</a></li>
-  <li><a href="#lcd-scroll-waveform-freeze.-27" id="toc-lcd-scroll-waveform-freeze.-27" class="nav-link" data-scroll-target="#lcd-scroll-waveform-freeze.-27"><span class="header-section-number">6.5</span> LCD Scroll Waveform Freeze. (27)</a></li>
-  <li><a href="#lcd-input-waveform-28" id="toc-lcd-input-waveform-28" class="nav-link" data-scroll-target="#lcd-input-waveform-28"><span class="header-section-number">6.6</span> LCD Input Waveform (28)</a></li>
-  <li><a href="#lcd-output-waveform-29" id="toc-lcd-output-waveform-29" class="nav-link" data-scroll-target="#lcd-output-waveform-29"><span class="header-section-number">6.7</span> LCD Output Waveform (29)</a></li>
-  <li><a href="#gain-envelope-30" id="toc-gain-envelope-30" class="nav-link" data-scroll-target="#gain-envelope-30"><span class="header-section-number">6.8</span> Gain Envelope (30)</a></li>
-  <li><a href="#compressor-and-de-expander-meter-31" id="toc-compressor-and-de-expander-meter-31" class="nav-link" data-scroll-target="#compressor-and-de-expander-meter-31"><span class="header-section-number">6.9</span> Compressor and De-Expander meter (31)</a>
-  <ul class="collapse">
-  <li><a href="#compressor-red" id="toc-compressor-red" class="nav-link" data-scroll-target="#compressor-red"><span class="header-section-number">6.9.1</span> Compressor (Red)</a></li>
-  <li><a href="#de-expander-orange" id="toc-de-expander-orange" class="nav-link" data-scroll-target="#de-expander-orange"><span class="header-section-number">6.9.2</span> De-Expander (Orange)</a></li>
-  </ul></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Metering Section</span></h1>
+<h1 class="title">Dynamic Sections Settings and Display</h1>
 </div>
 
 
@@ -212,56 +217,11 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="signal-input-vu-meter-23" class="level2" data-number="6.1">
-<h2 data-number="6.1" class="anchored" data-anchor-id="signal-input-vu-meter-23"><span class="header-section-number">6.1</span> Signal Input VU meter (23)</h2>
-<p>Unit: dB vu (Decibel Volume Unit)<br>
-Ref: -16 dBFS (Decibels relative to Full Scale)</p>
-</section>
-<section id="signal-output-vu-meter-24" class="level2" data-number="6.2">
-<h2 data-number="6.2" class="anchored" data-anchor-id="signal-output-vu-meter-24"><span class="header-section-number">6.2</span> Signal Output VU meter (24)</h2>
-<p>Unit: dB vu (Decibel Volume Unit)<br>
-Ref: -16 dBFS (Decibels relative to Full Scale)</p>
-</section>
-<section id="lcd-onoff-25" class="level2" data-number="6.3">
-<h2 data-number="6.3" class="anchored" data-anchor-id="lcd-onoff-25"><span class="header-section-number">6.3</span> LCD On/Off (25)</h2>
-<p>Turns on or off the scroll LCD window.</p>
-</section>
-<section id="lcd-scroll-waveform-speed-26" class="level2" data-number="6.4">
-<h2 data-number="6.4" class="anchored" data-anchor-id="lcd-scroll-waveform-speed-26"><span class="header-section-number">6.4</span> LCD Scroll Waveform Speed (26)</h2>
-<p>Defines the display integration time (the scroll speed).</p>
-</section>
-<section id="lcd-scroll-waveform-freeze.-27" class="level2" data-number="6.5">
-<h2 data-number="6.5" class="anchored" data-anchor-id="lcd-scroll-waveform-freeze.-27"><span class="header-section-number">6.5</span> LCD Scroll Waveform Freeze. (27)</h2>
-<p>Freezes the scroll display waveform at its current state.</p>
-</section>
-<section id="lcd-input-waveform-28" class="level2" data-number="6.6">
-<h2 data-number="6.6" class="anchored" data-anchor-id="lcd-input-waveform-28"><span class="header-section-number">6.6</span> LCD Input Waveform (28)</h2>
-<p>The waveform displays the mono mix of the incoming signal.</p>
-</section>
-<section id="lcd-output-waveform-29" class="level2" data-number="6.7">
-<h2 data-number="6.7" class="anchored" data-anchor-id="lcd-output-waveform-29"><span class="header-section-number">6.7</span> LCD Output Waveform (29)</h2>
-<p>The waveform displays the mono mix of the outgoing processed signal.</p>
-</section>
-<section id="gain-envelope-30" class="level2" data-number="6.8">
-<h2 data-number="6.8" class="anchored" data-anchor-id="gain-envelope-30"><span class="header-section-number">6.8</span> Gain Envelope (30)</h2>
-<p>Displays the final gain envelope (linear).</p>
-</section>
-<section id="compressor-and-de-expander-meter-31" class="level2" data-number="6.9">
-<h2 data-number="6.9" class="anchored" data-anchor-id="compressor-and-de-expander-meter-31"><span class="header-section-number">6.9</span> Compressor and De-Expander meter (31)</h2>
-<section id="compressor-red" class="level3" data-number="6.9.1">
-<h3 data-number="6.9.1" class="anchored" data-anchor-id="compressor-red"><span class="header-section-number">6.9.1</span> Compressor (Red)</h3>
-<p>Unit: Decibel (dB)<br>
-Range: -16 to 0</p>
-</section>
-<section id="de-expander-orange" class="level3" data-number="6.9.2">
-<h3 data-number="6.9.2" class="anchored" data-anchor-id="de-expander-orange"><span class="header-section-number">6.9.2</span> De-Expander (Orange)</h3>
-<p>Unit: Decibel (dB)<br>
-Range: 0 to +</p>
-<p>All information is displayed at a refresh rate of 30 fps and displaying the maximum action during the processing period.</p>
+<p>Every band features four dynamic sections working is parallel.</p>
+<p>Alt + Click temporarily unlink the control when the band is linked.</p>
+<p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/alchemist/Alchemist_04.png" class="img-fluid"></p>
 
 
-</section>
-</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
@@ -499,13 +459,13 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./Processing_Section.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Processing Section</span></span>
+      <a href="./Band_Display.html" class="pagination-link">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Band Display</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./Preset_Management.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Preset Management</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./Dynamic_Sections_Settings.html" class="pagination-link">
+        <span class="nav-page-text"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Dynamic Sections Settings</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
