--- a/alchemist/index.html
+++ b/alchemist/index.html
@@ -6,8 +6,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="FLUX:: Immersive">
+<meta name="dcterms.date" content="2023-02-06">
 
-<title>Syrah - 10&nbsp; Specifications</title>
+<title>Alchemist</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,8 +32,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./../flux_processing_release_notes.html" rel="next">
-<link href="./Get_started.html" rel="prev">
+<link href="./General_Settings_and_Display.html" rel="next">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -73,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Specifications.html"><span class="chapter-number">10</span>&nbsp; <span class="chapter-title">Specifications</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./index.html"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Alchemist - The Alchemist concept</span></a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -88,9 +89,9 @@ ul.task-list li input[type="checkbox"] {
   <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal sidebar-navigation floating overflow-auto">
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
-      <a href="./">Syrah</a> 
+      <a href="./">Alchemist</a> 
         <div class="sidebar-tools-main">
-    <a href="./Syrah.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
+    <a href="./Alchemist.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
 </div>
     </div>
       </div>
@@ -103,62 +104,85 @@ ul.task-list li input[type="checkbox"] {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syrah</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Introduction.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Introduction</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./User_Interface.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">User Interface</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Input_Output_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Input Output Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Processing_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Processing Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Metering_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Metering Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Preset_Management.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Preset Management</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Plug-in_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Plug-in Settings</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Get_started.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Get started</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Specifications.html" class="sidebar-item-text sidebar-link active"><span class="chapter-number">10</span>&nbsp; <span class="chapter-title">Specifications</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link active"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Alchemist - The Alchemist concept</span></a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">Appendices</a>
+            <a href="./General_Settings_and_Display.html" class="sidebar-item-text sidebar-link">General Settings and Display</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
       </div>
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">General Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">General Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Bands_Settings_and_Display.html" class="sidebar-item-text sidebar-link">Bands Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Band Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Time_Related_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Time Related Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Band Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Dynamic_Sections_Settings_and_Display.html" class="sidebar-item-text sidebar-link">Dynamic Sections Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Dynamic Sections Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Dynamic Sections Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <span class="sidebar-item-text sidebar-link text-start">Specifications</span>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">Appendices</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-5" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./../flux_processing_release_notes.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Release Notes</span></a>
@@ -176,14 +200,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#processing-specifications---syrah" id="toc-processing-specifications---syrah" class="nav-link active" data-scroll-target="#processing-specifications---syrah"><span class="header-section-number">10.0.1</span> Processing Specifications - Syrah</a></li>
-  <li><a href="#processing-specifications---syrah-studio-session" id="toc-processing-specifications---syrah-studio-session" class="nav-link" data-scroll-target="#processing-specifications---syrah-studio-session"><span class="header-section-number">10.0.2</span> Processing Specifications - Syrah Studio Session</a></li>
-  <li><a href="#licence-requirements" id="toc-licence-requirements" class="nav-link" data-scroll-target="#licence-requirements"><span class="header-section-number">10.0.3</span> Licence Requirements</a></li>
-  <li><a href="#compatibility" id="toc-compatibility" class="nav-link" data-scroll-target="#compatibility"><span class="header-section-number">11</span> Compatibility</a>
-  <ul class="collapse">
-  <li><a href="#windows---10-64-bits-only." id="toc-windows---10-64-bits-only." class="nav-link" data-scroll-target="#windows---10-64-bits-only."><span class="header-section-number">11.0.1</span> Windows - 10, 64 bits only.</a></li>
-  <li><a href="#macos-intel-and-arm---10.12-sierra-and-more-11-and-12." id="toc-macos-intel-and-arm---10.12-sierra-and-more-11-and-12." class="nav-link" data-scroll-target="#macos-intel-and-arm---10.12-sierra-and-more-11-and-12."><span class="header-section-number">11.0.2</span> macOS (Intel and ARM) - 10.12 (Sierra) and more, 11 and 12.</a></li>
-  </ul></li>
+  <li><a href="#alchemist---the-alchemist-concept" id="toc-alchemist---the-alchemist-concept" class="nav-link active" data-scroll-target="#alchemist---the-alchemist-concept"><span class="header-section-number">1</span> Alchemist - The Alchemist concept</a></li>
   </ul>
 </nav>
     </div>
@@ -192,14 +209,26 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">10</span>&nbsp; <span class="chapter-title">Specifications</span></h1>
+<h1 class="title">Alchemist</h1>
 </div>
 
 
 
 <div class="quarto-title-meta">
 
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p>FLUX:: Immersive </p>
+          </div>
+  </div>
     
+    <div>
+    <div class="quarto-title-meta-heading">Published</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">February 6, 2023</p>
+    </div>
+  </div>
   
     
   </div>
@@ -207,54 +236,16 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="processing-specifications---syrah" class="level3" data-number="10.0.1">
-<h3 data-number="10.0.1" class="anchored" data-anchor-id="processing-specifications---syrah"><span class="header-section-number">10.0.1</span> Processing Specifications - Syrah</h3>
-<ul>
-<li>Up to 16 channels Input/Output.</li>
-<li>64-bits internal floating point processing.</li>
-<li>Sampling rate up to 384 kHz DXD (Pyramix and Ovation MassCore/Native).</li>
-<li>Sampling rate up to 192 kHz for Native (AU/VST/ST3/AAX/AAX AudioSuite).</li>
-</ul>
-</section>
-<section id="processing-specifications---syrah-studio-session" class="level3" data-number="10.0.2">
-<h3 data-number="10.0.2" class="anchored" data-anchor-id="processing-specifications---syrah-studio-session"><span class="header-section-number">10.0.2</span> Processing Specifications - Syrah Studio Session</h3>
-<ul>
-<li>Mono/Stereo Input/Output.</li>
-<li>64-bits internal floating point processing.</li>
-<li>Sampling rate up to 96 kHz.</li>
-</ul>
-</section>
-<section id="licence-requirements" class="level3" data-number="10.0.3">
-<h3 data-number="10.0.3" class="anchored" data-anchor-id="licence-requirements"><span class="header-section-number">10.0.3</span> Licence Requirements</h3>
-<p>In order to use Syrah or Syrah Studio Session, an iLok.com user account is required (the iLok USB Smart Key is not required).</p>
-</section>
-<section id="compatibility" class="level1" data-number="11">
-<h1 data-number="11"><span class="header-section-number">11</span> Compatibility</h1>
-<section id="windows---10-64-bits-only." class="level3" data-number="11.0.1">
-<h3 data-number="11.0.1" class="anchored" data-anchor-id="windows---10-64-bits-only."><span class="header-section-number">11.0.1</span> Windows - 10, 64 bits only.</h3>
-<ul>
-<li>VST (2.4) in 64 bit</li>
-<li>VST3 (3.1) in 64 bit</li>
-<li>AAX Native/DSP/AudioSuite, all in 64 bit*</li>
-<li>Waves WPAPI Native/Soundgrid in 64 bit</li>
-<li>VS3** Pyramix 10 and more in 64 bit and Ovation 6 and more</li>
-<li>AVID VENUE Systems</li>
-</ul>
-</section>
-<section id="macos-intel-and-arm---10.12-sierra-and-more-11-and-12." class="level3" data-number="11.0.2">
-<h3 data-number="11.0.2" class="anchored" data-anchor-id="macos-intel-and-arm---10.12-sierra-and-more-11-and-12."><span class="header-section-number">11.0.2</span> macOS (Intel and ARM) - 10.12 (Sierra) and more, 11 and 12.</h3>
-<ul>
-<li>VST (2.4) in 64 bit</li>
-<li>VST3 (3.1) in 64 bit</li>
-<li>AU in 64 bit</li>
-<li>AAX Native/DSP/AudioSuite, all in 64 bit*</li>
-<li>Waves WPAPI Native/Soundgrid in 64 bit</li>
-<li>AVID VENUE Systems</li>
-</ul>
-<p>** VS3 for Pyramix &amp; Ovation Native/MassCore sold only through Merging Technologies and authorized dealers.</p>
+<section id="alchemist---the-alchemist-concept" class="level1" data-number="1">
+<h1 data-number="1"><span class="header-section-number">1</span> Alchemist - The Alchemist concept</h1>
+<p><a href="https://www.flux.audio/project/alchemist/">Product Page</a> | <a href="https://shop.flux.audio/en_US/products/alchemist">Shop Page</a></p>
+<p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/alchemist/Alchemist_00.png" class="img-fluid"></p>
+<p>At first, the wideband signal is split into frequency bands by a slope adjustable cross-over. Each band is individually processed for dynamic. For every frequency band, every dynamic processing section, the compressor, the de- compressor, the expander and the de-expander features its own envelop generator including Dynamic Ratio, Peak amount parameters, L.I.D. (Level independent Detector) and its threshold adjustment. For every frequency band, a transient manager can be inserted pre or post dynamic processing. To achieve a total control on the audio signal, a MS management is available on every frequency band.</p>
+<p>Then all the frequency bands are summed to rebuild a wideband processed signal. A soft clipper featuring a threshold for soft knee, and a dry mix control are available.</p>
+<p>Alchemist gathers in a single plug-in all the Flux science about filtering and dynamic processing.</p>
+<p><img src="https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/alchemist/Alchemist_01.png" class="img-fluid"></p>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
@@ -493,13 +484,10 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./Get_started.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Get started</span></span>
-      </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./../flux_processing_release_notes.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Release Notes</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./General_Settings_and_Display.html" class="pagination-link">
+        <span class="nav-page-text">General Settings and Display</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
