--- a/alchemist/Specifications.html
+++ b/alchemist/Specifications.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Syrah - 4&nbsp; Input Output Section</title>
+<title>Alchemist - Specifications</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,8 +30,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./Processing_Section.html" rel="next">
-<link href="./User_Interface.html" rel="prev">
+<link href="./../flux_processing_release_notes.html" rel="next">
+<link href="./Dynamic_Sections_Display.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -73,7 +73,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Input_Output_Section.html"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Input Output Section</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./Specifications.html">Specifications</a></li></ol></nav>
       <a class="flex-grow-1" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -88,9 +88,9 @@ ul.task-list li input[type="checkbox"] {
   <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal sidebar-navigation floating overflow-auto">
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
-      <a href="./">Syrah</a> 
+      <a href="./">Alchemist</a> 
         <div class="sidebar-tools-main">
-    <a href="./Syrah.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
+    <a href="./Alchemist.pdf" title="Download PDF" class="quarto-navigation-tool px-1" aria-label="Download PDF"><i class="bi bi-file-pdf"></i></a>
 </div>
     </div>
       </div>
@@ -103,62 +103,85 @@ ul.task-list li input[type="checkbox"] {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syrah</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Introduction.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Introduction</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./User_Interface.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">User Interface</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Input_Output_Section.html" class="sidebar-item-text sidebar-link active"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Input Output Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Processing_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Processing Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Metering_Section.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Metering Section</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Preset_Management.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Preset Management</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Plug-in_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Plug-in Settings</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Get_started.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Get started</span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Specifications.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">10</span>&nbsp; <span class="chapter-title">Specifications</span></a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Alchemist - The Alchemist concept</span></a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">Appendices</a>
+            <a href="./General_Settings_and_Display.html" class="sidebar-item-text sidebar-link">General Settings and Display</a>
           <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" aria-expanded="true">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
       </div>
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">General Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./General_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">General Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Bands_Settings_and_Display.html" class="sidebar-item-text sidebar-link">Bands Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Band Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Time_Related_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Time Related Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Band_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Band Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="./Dynamic_Sections_Settings_and_Display.html" class="sidebar-item-text sidebar-link">Dynamic Sections Settings and Display</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 show">  
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Settings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Dynamic Sections Settings</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Dynamic_Sections_Display.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Dynamic Sections Display</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <span class="sidebar-item-text sidebar-link text-start">Specifications</span>
+  </li>
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">Appendices</a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-5" aria-expanded="true">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-5" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./../flux_processing_release_notes.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Release Notes</span></a>
@@ -176,13 +199,10 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#input-gain-1" id="toc-input-gain-1" class="nav-link active" data-scroll-target="#input-gain-1"><span class="header-section-number">4.1</span> Input Gain (1)</a></li>
-  <li><a href="#output-gain-2" id="toc-output-gain-2" class="nav-link" data-scroll-target="#output-gain-2"><span class="header-section-number">4.2</span> Output Gain (2)</a></li>
-  <li><a href="#link-3" id="toc-link-3" class="nav-link" data-scroll-target="#link-3"><span class="header-section-number">4.3</span> Link (3)</a></li>
-  <li><a href="#gain-comp.-4" id="toc-gain-comp.-4" class="nav-link" data-scroll-target="#gain-comp.-4"><span class="header-section-number">4.4</span> Gain Comp. (4)</a></li>
-  <li><a href="#dry-mix-5" id="toc-dry-mix-5" class="nav-link" data-scroll-target="#dry-mix-5"><span class="header-section-number">4.5</span> Dry Mix (5)</a></li>
-  <li><a href="#clipper-6" id="toc-clipper-6" class="nav-link" data-scroll-target="#clipper-6"><span class="header-section-number">4.6</span> Clipper (6)</a></li>
-  <li><a href="#bypass-7" id="toc-bypass-7" class="nav-link" data-scroll-target="#bypass-7"><span class="header-section-number">4.7</span> Bypass (7)</a></li>
+  <li><a href="#processing-specifications---alchemist" id="toc-processing-specifications---alchemist" class="nav-link active" data-scroll-target="#processing-specifications---alchemist">Processing Specifications - Alchemist</a></li>
+  <li><a href="#processing-specifications---alchemist-session" id="toc-processing-specifications---alchemist-session" class="nav-link" data-scroll-target="#processing-specifications---alchemist-session">Processing Specifications - Alchemist Session</a></li>
+  <li><a href="#compatibility" id="toc-compatibility" class="nav-link" data-scroll-target="#compatibility">Compatibility</a></li>
+  <li><a href="#licence-requirements" id="toc-licence-requirements" class="nav-link" data-scroll-target="#licence-requirements">Licence Requirements</a></li>
   </ul>
 </nav>
     </div>
@@ -191,7 +211,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Input Output Section</span></h1>
+<h1 class="title">Specifications</h1>
 </div>
 
 
@@ -206,46 +226,53 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="input-gain-1" class="level2" data-number="4.1">
-<h2 data-number="4.1" class="anchored" data-anchor-id="input-gain-1"><span class="header-section-number">4.1</span> Input Gain (1)</h2>
-<p>Controls the gain applied to the dynamic processing input. This setting may affect the dynamics signal detection.</p>
-<p>Unit: Decibel (dB)<br>
-Range: -48.00 to +48.<br>
-Min. Steps: 0.<br>
-Default Value: 0.</p>
+<section id="processing-specifications---alchemist" class="level2">
+<h2 class="anchored" data-anchor-id="processing-specifications---alchemist">Processing Specifications - Alchemist</h2>
+<ul>
+<li>Up to 16 channels Input/Output for Essential version.</li>
+<li>64-bits internal floating point processing.</li>
+<li>Sampling rate up to 384 kHz DXD (Pyramix and Ovation MassCore/Native).</li>
+<li>Sampling rate up to 192 kHz for Native (AU/VST/VST3/AAX/AAX AudioSuite).</li>
+</ul>
 </section>
-<section id="output-gain-2" class="level2" data-number="4.2">
-<h2 data-number="4.2" class="anchored" data-anchor-id="output-gain-2"><span class="header-section-number">4.2</span> Output Gain (2)</h2>
-<p>Controls the gain at the output stage of the dynamic processing, right before the Clipper (and the Clipper is the last, final step, in the entire processing chain).</p>
-<p>Unit: Decibel (dB)<br>
-Range: -48.00 to +48.<br>
-Min. Steps: 0.<br>
-Default Value: 0.</p>
+<section id="processing-specifications---alchemist-session" class="level2">
+<h2 class="anchored" data-anchor-id="processing-specifications---alchemist-session">Processing Specifications - Alchemist Session</h2>
+<ul>
+<li>Mono/Stereo Input/Output.</li>
+<li>64-bits internal floating-point processing.</li>
+<li>Sampling rate up to 96 kHz.</li>
+</ul>
 </section>
-<section id="link-3" class="level2" data-number="4.3">
-<h2 data-number="4.3" class="anchored" data-anchor-id="link-3"><span class="header-section-number">4.3</span> Link (3)</h2>
-<p>Connects Output Gain to Input Gain, when adjusting Input Gain the Output Gain automatically reflects the change.</p>
+<section id="compatibility" class="level2">
+<h2 class="anchored" data-anchor-id="compatibility">Compatibility</h2>
+<p><strong>BitterSweet Pro</strong></p>
+<ul>
+<li><strong>Windows - 10 64 bits.</strong>
+<ul>
+<li>VST (2.4) in 64 bit</li>
+<li>VST (3.1) in 64 bit</li>
+<li>AAX Native/DSP* in 64 bit</li>
+<li>AAX AudioSuite* in 64 bit</li>
+<li>Waves WPAPI Native/Soundgrid in 64 bit</li>
+<li>VS3** Pyramix 10 and more in 64 bit and Ovation 6 and more</li>
+<li>Avid Venue Systems</li>
+</ul></li>
+<li><strong>macOS (Intel and ARM) - 10.12 and more, 11 and 12.</strong>
+<ul>
+<li>VST (2.4) in 64 bit</li>
+<li>VST3 (3.1) in 64 bit</li>
+<li>AU in 64 bit</li>
+<li>AAX Native/DSP* in 64 bit</li>
+<li>AAX AudioSuite* in 64 bit</li>
+<li>Waves WPAPI Native/Soundgrid in 64 bit</li>
+<li>Avid Venue Systems</li>
+</ul></li>
+</ul>
+<p>** VS3 for Pyramix &amp; Ovation Native/MassCore sold only through Merging Technologies and authorized dealers.</p>
 </section>
-<section id="gain-comp.-4" class="level2" data-number="4.4">
-<h2 data-number="4.4" class="anchored" data-anchor-id="gain-comp.-4"><span class="header-section-number">4.4</span> Gain Comp. (4)</h2>
-<p>The gain compensation attempts to adjust the output level to match the input level, and compensate for gain alterations produced by the dynamic processing (compression, de-expansion).<br>
-Due to the extreme range of possible gain structure modifications in the algorithm, according to the complexity of the audio material, a precise result is nearly impossible to accomplish, and so forth the gain compensation should not be expected to achieve perfection.</p>
-</section>
-<section id="dry-mix-5" class="level2" data-number="4.5">
-<h2 data-number="4.5" class="anchored" data-anchor-id="dry-mix-5"><span class="header-section-number">4.5</span> Dry Mix (5)</h2>
-<p>A true dry/wet mix control with gain compensation allowing for parallel compression or simply for fine adjustment of the entire processing.</p>
-<p>Unit: Percent (%)<br>
-Range: 0.00 to 100.<br>
-Min. Steps: 0.<br>
-Default Value: 0.</p>
-</section>
-<section id="clipper-6" class="level2" data-number="4.6">
-<h2 data-number="4.6" class="anchored" data-anchor-id="clipper-6"><span class="header-section-number">4.6</span> Clipper (6)</h2>
-<p>The Brick wall clipper is applied at the very last stage of the processing chain. The clipper knee is dependent on other parameter settings and is automatically adjusted in the algorithm. When setting “Mode” to one of the “Dynamic” settings the knee will also alter according to the audio material.</p>
-</section>
-<section id="bypass-7" class="level2" data-number="4.7">
-<h2 data-number="4.7" class="anchored" data-anchor-id="bypass-7"><span class="header-section-number">4.7</span> Bypass (7)</h2>
-<p>Bypasses the plug-in processing by routing the input direct to the output. The actual processing is still performed in the background allowing for a true and smooth transition between the processed and the actual incoming signal.</p>
+<section id="licence-requirements" class="level2">
+<h2 class="anchored" data-anchor-id="licence-requirements">Licence Requirements</h2>
+<p>In order to use Alchemist or Alchemist Session, an iLok.com user account is required (the iLok USB Smart Key is not required).</p>
 
 
 </section>
@@ -486,13 +513,13 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./User_Interface.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">User Interface</span></span>
+      <a href="./Dynamic_Sections_Display.html" class="pagination-link">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Dynamic Sections Display</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./Processing_Section.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Processing Section</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./../flux_processing_release_notes.html" class="pagination-link">
+        <span class="nav-page-text"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Release Notes</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
